# browser_oxide

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  LICENSE-APACHE  PERFORMANCE_REPORT.md  README.md  SCOPE.md  SECURITY.md  adidas-network.json  audit.toml  check_iterables.rs  chrome147_tls_peet.json  deny.toml  llms.txt  pyproject.toml  research_2026.md  research_2026_test_results.md  research_2026_test_results_2026_04_29.md  timeline.md
crates/akamai/: Cargo.toml
crates/akamai/src/: crypto.rs  datadome_crypto.rs  drain.rs  lib.rs  payload.rs  sec_cpt.rs  session.rs  tea_cbc.rs  v3_payload.rs
crates/akamai/tests/: dead_code_labels.rs
crates/browser/: Cargo.toml  kasada_error_0.b64  kasada_error_2.b64  kasada_error_3.b64  kasada_error_4.b64  kasada_error_5.b64  kasada_error_6.b64  kasada_error_8.b64  kasada_ips.js  kasada_vm_trace.json  probe_raw.json
crates/browser/benches/: page_throughput.rs
crates/browser/examples/: aws_capture.rs  aws_probe_live.rs  awswaf_probe.rs  classify_stdin.rs  fetch_probe.rs  getting_started.rs  ja4_capture.rs  nav_timed.rs  parse_probe.rs  sweep_metrics.rs  thin_probe.rs
crates/browser/oxide_dump/: final_script_0.js  final_script_1.js  https___www.wildberries.ru___wbaas_challenges_antibot___static_v1_index-DQJ0L4Mq.js  page_html_0.html
crates/browser/src/: challenge.rs  classify.rs  csp_collector.rs  datadome_handler.rs  iframe.rs  lib.rs  page.rs  parallel.rs  pool.rs  script_runner.rs  stylesheet_collector.rs
crates/browser/src/js/: humanize.js
crates/browser/src/solvers/: akamai.rs  mod.rs  (+3 more)
crates/browser/tests/: adidas_cookie_replay.rs  adidas_fetch_sensor_vm.rs  adidas_sensor_api_probes.rs  adidas_sensor_capture.rs  akamai_probe_local.rs  akamai_v13_probe_parity.rs  anti_bot.rs  anti_bot_sites.rs  api_completeness.rs  audio_parity.rs  audit_failing_sites.rs  behavioral_polish.rs  blocker_rigorous_probe.rs  browser_comparison.rs  canvas_paths.rs  capture_bmak_js.rs  capture_chrome_148_hello.rs  challenge_solver.rs  chl_sites.rs  chrome147_parity.rs  chrome147_self_capture.rs  chrome_compat.rs  chrome_deep.rs  cloudflare_udemy.rs  computed_style.rs  csp_enforcement.rs  debug_blocked.rs  debug_fixes.rs  deep_path_validation.rs  diagnostic_audit.rs  diagnostic_browserleaks.rs  diagnostic_creepjs.rs  diagnostic_js_surface.rs  diagnostic_pixelscan.rs  diagnostic_screen.rs  diagnostic_screen_direct.rs  diagnostic_zillow.rs  dump_props.rs  duolingo_caps_diag.rs  e2e_browser.rs  (+43 more)
crates/browser_oxide/: Cargo.toml  build.rs
crates/browser_oxide/benches/: page_throughput.rs
crates/browser_oxide/examples/: classify_stdin.rs  fetch_probe.rs  getting_started.rs  ja4_capture.rs  nav_timed.rs  parse_probe.rs  sweep_metrics.rs  thin_probe.rs
crates/browser_oxide/profiles/: chrome_148_macos.yaml
crates/browser_oxide/src/: challenge.rs  classify.rs  csp_collector.rs  iframe.rs  lib.rs  page.rs  parallel.rs  pool.rs  script_runner.rs  stylesheet_collector.rs
crates/browser_oxide/tests/: anti_bot.rs  api_completeness.rs  audio_fingerprint.rs  audio_parity.rs  audio_reference.rs  basic.rs  behavioral_polish.rs  blocker_rigorous_probe.rs  browser_comparison.rs  canvas_paths.rs  capture_chrome_148_hello.rs  chl_sites.rs  chrome147_parity.rs  chrome147_self_capture.rs  chrome_compat.rs  chrome_deep.rs  computed_style.rs  csp_enforcement.rs  debug_blocked.rs  debug_fixes.rs  deep_path_validation.rs  diagnostic_audit.rs  diagnostic_browserleaks.rs  diagnostic_creepjs.rs  diagnostic_js_surface.rs  diagnostic_pixelscan.rs  diagnostic_screen.rs  diagnostic_screen_direct.rs  diagnostic_zillow.rs  dump_props.rs  e2e_browser.rs  fingerprint_scorers.rs  fingerprint_suite.rs  font_metrics.rs  h2_frame_bytes.rs  holistic_sweep.rs  humanize_signals.rs  iframe_fp_diag.rs  iframe_isolation.rs  integration.rs  (+30 more)
crates/browser_oxide_host/: Cargo.toml
crates/browser_oxide_host/src/: lib.rs
crates/browser_oxide_mcp/: Cargo.toml  README.md
crates/browser_oxide_mcp/src/: main.rs
crates/browser_oxide_py/: Cargo.toml
crates/browser_oxide_py/src/: lib.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: audio.rs  canvas2d.rs  lib.rs  osmesa_ffi.rs  path.rs  periodic_wave.rs  webgl.rs  webgl_render.rs
crates/canvas/tests/: audio_reference.rs  font_metrics.rs  png_byte_parity.rs  png_chunks.rs
crates/css_cascade/: Cargo.toml
crates/css_cascade/src/: cascade.rs  computed.rs  inheritance.rs  initial.rs  media.rs
crates/css_parser/: Cargo.toml
crates/css_parser/src/: ast.rs  error.rs  lib.rs  parser.rs  source.rs  token.rs  tokenizer.rs
crates/css_selectors/: Cargo.toml
crates/css_selectors/src/: error.rs  matching.rs  nth.rs  parser.rs  specificity.rs
crates/css_values/: Cargo.toml
crates/css_values/src/: calc.rs  lib.rs  parse.rs  property.rs
crates/dom/: Cargo.toml
crates/dom/src/: arena.rs  element.rs  lib.rs  node.rs
crates/event_loop/: Cargo.toml
crates/event_loop/src/: lib.rs
crates/html_parser/: Cargo.toml
crates/html_parser/src/: lib.rs  tree_sink.rs
crates/js_runtime/: Cargo.toml
crates/js_runtime/src/: lib.rs  module_loader.rs  native_fns.rs  runtime.rs  snapshot.rs  state.rs  utils.rs
crates/js_runtime/tests/: audio_fingerprint.rs  basic.rs  worker.rs
crates/layout/: Cargo.toml
crates/layout/src/: engine.rs  layout_unit.rs  lib.rs  query.rs  resolve.rs  style_map.rs
crates/net/: Cargo.toml
crates/net/src/: LICENSE-NOTE.md  blocker.rs  compression.rs  cookies.rs  csp.rs  h1_client.rs  h2_client.rs  h3_request.rs  headers.rs  ja4h.rs  kasada_session.rs  lib.rs  proxy.rs  quic.rs  tcp.rs  tls.rs
crates/net/tests/: h2_frame_bytes.rs  proxy_roundtrip.rs  tls_fingerprint.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: server.rs  session.rs
crates/stealth/: Cargo.toml
crates/stealth/profiles/: chrome_148_macos.yaml
crates/stealth/src/: aliyun.rs  behavior.rs  cloudflare.rs  config.rs  douyin.rs  gpu.rs  kasada.rs  lib.rs  ngenix.rs  presets.rs  profile.rs  qrator.rs
crates/workers/: Cargo.toml
crates/workers/src/: lib.rs
(+598 files in other folders)
