[workspace]
resolver = "2"
members = [
    "crates/css_parser",
    "crates/css_selectors",
    "crates/css_values",
    "crates/css_cascade",
    "crates/dom",
    "crates/html_parser",
    "crates/js_runtime",
    "crates/event_loop",
    "crates/browser",
    "crates/canvas",
    "crates/layout",
    "crates/net",
    "crates/workers",
    "crates/stealth",
    "crates/protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Yury Fedoseev"]
repository = "https://github.com/yfedoseev/browser_oxide"

# Central lint policy. CI runs `cargo clippy --workspace -- -D warnings`;
# the few `allow`s below are deliberate, documented exceptions rather
# than per-site `#[allow]` scattered through the tree. Everything else
# is denied. Each crate opts in with `[lints] workspace = true`.
[workspace.lints.clippy]
# Engine entry points (Page::navigate_*, biquad_coeffs, profile builders)
# legitimately take many parameters; splitting them into structs would
# be churn without clarity.
too_many_arguments = "allow"
# Stylistic rustdoc list-formatting lints — the docs render correctly;
# not worth reflowing every bullet list in the tree.
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"

[workspace.dependencies]
# Internal crates — explicit version pinned to the workspace version
# so cargo-deny's `wildcards = "deny"` rule doesn't trip on path-only
# `version = "*"` resolution.
css_parser = { version = "0.1.0", path = "crates/css_parser" }
css_selectors = { version = "0.1.0", path = "crates/css_selectors" }
css_values = { version = "0.1.0", path = "crates/css_values" }
css_cascade = { version = "0.1.0", path = "crates/css_cascade" }
dom = { version = "0.1.0", path = "crates/dom" }
html_parser = { version = "0.1.0", path = "crates/html_parser" }
js_runtime = { version = "0.1.0", path = "crates/js_runtime" }
canvas = { version = "0.1.0", path = "crates/canvas" }
layout = { version = "0.1.0", path = "crates/layout" }
net = { version = "0.1.0", path = "crates/net" }
event_loop = { version = "0.1.0", path = "crates/event_loop" }
workers = { version = "0.1.0", path = "crates/workers" }
stealth = { version = "0.1.0", path = "crates/stealth" }
protocol = { version = "0.1.0", path = "crates/protocol" }
browser = { version = "0.1.0", path = "crates/browser" }

# Async runtime + common derive deps shared by multiple crates.
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# cargo test --release uses this profile
[profile.release.package."*"]
opt-level = 3
