[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "browser-oxide"
version = "0.1.0"
description = "BrowserOxide — stealth headless browser engine in Rust (Python bindings) — real HTML/CSS/DOM/JS, own BoringSSL TLS, native fingerprint, no Chromium"
readme = "python/README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Yury Fedoseev" }]
keywords = [
  "stealth-browser",
  "headless-browser",
  "anti-detect-browser",
  "web-scraping",
  "anti-bot",
  "camoufox-alternative",
  "tls-fingerprint",
  "ja4",
  "browser-fingerprint",
  "undetected-browser",
  "bypass-cloudflare",
  "datadome",
  "mcp",
  "ai-agents",
  "rust",
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
]

[project.urls]
Repository = "https://github.com/yfedoseev/browser_oxide"

[tool.maturin]
manifest-path = "crates/browser_oxide_py/Cargo.toml"
module-name = "browser_oxide._native"
python-source = "python"
