[package]
name = "akamai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Akamai Bot Manager (web) sensor_data v2 encoder for browser_oxide. Generates the encrypted POST body that upgrades _abck from unfavorable to favorable."

[dependencies]
stealth = { path = "../stealth" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
hex = "0.4"
tokio = { version = "1", features = ["full"] }
