[package]
name = "canvas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Canvas 2D rendering (skia-safe), WebGL stubs, AudioContext fingerprint"
publish = false                                                                        # 9 of 16 crate names collide on crates.io; flip per-crate when renamed

[features]
default = []
webgl-render = ["glow"]

[dependencies]
# Chrome's Skia via safe Rust bindings. Default features kept so the
# prebuilt binaries distributed via skia-bindings match — disabling
# default-features forces a full source build that requires
# `git-sync-deps` to fetch the entire Skia tree.
skia-safe = "0.97"
png = "0.17"
base64 = "0.22"
# Used for Blink-compatible PeriodicWave inverse-FFT wavetable generation
# (crates/canvas/src/periodic_wave.rs). Pure Rust, MIT.
rustfft = "6"
# T1.2 font stack: fontdb (MIT/Apache-2.0) is the face database,
# rustybuzz (MIT) is a HarfBuzz port for text shaping, swash
# (Apache-2.0) is the glyph rasterizer. All pure Rust, all clean for
# our MIT/Apache-2.0 policy.
fontdb = { version = "0.23", default-features = false }
rustybuzz = "0.20"
swash = "0.2"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }
glow = { version = "0.17", optional = true }

[dev-dependencies]
sha2 = "0.10"

[lints]
workspace = true
