[package]
name = "css_cascade"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CSS cascade, specificity, inheritance, @layer, @media, @container"

[dependencies]
css_parser = { path = "../css_parser" }
css_selectors = { path = "../css_selectors" }
css_values = { path = "../css_values" }
thiserror = "2"
