[package]
name = "css_cascade"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CSS cascade, specificity, inheritance, @layer, @media, @container"

[dependencies]
css_parser = { workspace = true }
css_selectors = { workspace = true }
css_values = { workspace = true }
thiserror = "2"
