[package]
name = "css_cascade"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CSS cascade, specificity, inheritance, @layer, @media, @container"
publish = false  # 9 of 16 crate names collide on crates.io; flip per-crate when renamed

[dependencies]
css_parser = { workspace = true }
css_selectors = { workspace = true }
css_values = { workspace = true }
thiserror = "2"
