[package]
name = "css_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CSS Syntax Level 3 tokenizer and parser with nesting support"
publish = false  # 9 of 16 crate names collide on crates.io; flip per-crate when renamed

[dependencies]
thiserror = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
