[package]
name = "css_selectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CSS Selectors Level 4 parser and matching engine"
publish = false                                                  # 9 of 16 crate names collide on crates.io; flip per-crate when renamed

[dependencies]
css_parser = { workspace = true }
thiserror = "2"

[lints]
workspace = true
