[package]
name = "css_values"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CSS property value parsing and typed representations"
publish = false  # 9 of 16 crate names collide on crates.io; flip per-crate when renamed

[dependencies]
css_parser = { workspace = true }
thiserror = "2"

[lints]
workspace = true
