[package]
name = "event_loop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Browser event loop: timers, microtasks, requestAnimationFrame, idle detection"

[dependencies]
js_runtime = { path = "../js_runtime" }
dom = { path = "../dom" }
deno_core = "0.311"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
html_parser = { path = "../html_parser" }
tokio = { version = "1", features = ["full", "test-util"] }
