[package]
name = "event_loop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Browser event loop: timers, microtasks, requestAnimationFrame, idle detection"

[dependencies]
js_runtime = { workspace = true }
dom = { workspace = true }
deno_core = "0.311"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
html_parser = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
