[package]
name = "event_loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Browser event loop: timers, microtasks, requestAnimationFrame, idle detection"
publish = false                                                                               # 9 of 16 crate names collide on crates.io; flip per-crate when renamed

[dependencies]
js_runtime = { workspace = true }
dom = { workspace = true }
deno_core = "0.311"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
html_parser = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
