[package]
name = "html_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "html5ever integration producing a browser_oxide DOM"
publish = false  # 9 of 16 crate names collide on crates.io; flip per-crate when renamed

[dependencies]
dom = { workspace = true }
html5ever = "0.39"
markup5ever = "0.39"

[dev-dependencies]
css_selectors = { workspace = true }

[lints]
workspace = true
