[package]
name = "js_runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "V8 JavaScript runtime with DOM bindings for browser_oxide"
publish = false                                                           # 9 of 16 crate names collide on crates.io; flip per-crate when renamed

[features]
default = []
# Enable real WebGL rendering via OSMesa+glow. Transitively enables
# the canvas crate's `webgl-render` feature so WebGLContext is
# available and `op_webgl_*` ops become non-stub.
webgl-render = ["canvas/webgl-render"]

[dependencies]
dom = { workspace = true }
html_parser = { workspace = true }
css_selectors = { workspace = true }
css_parser = { workspace = true }
css_values = { workspace = true }
stealth = { workspace = true }
net = { workspace = true }
canvas = { workspace = true }
layout = { workspace = true }
deno_core = "0.311"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
rand = "0.10"
rand_distr = "0.6"
rustfft = "6"
base64 = "0.22"
sha1 = "0.11"
sha2 = "0.10"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
lazy_static = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
