[package]
name = "layout"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Layout engine (taffy-based) for browser_oxide — getBoundingClientRect, offsetWidth, getComputedStyle"

[dependencies]
dom = { workspace = true }
css_parser = { workspace = true }
css_values = { workspace = true }
css_cascade = { workspace = true }
taffy = "0.8"
serde = { version = "1", features = ["derive"] }
