[package]
name = "layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Layout engine (taffy-based) for browser_oxide — getBoundingClientRect, offsetWidth, getComputedStyle"
publish = false  # 9 of 16 crate names collide on crates.io; flip per-crate when renamed

[dependencies]
dom = { workspace = true }
css_parser = { workspace = true }
css_values = { workspace = true }
css_cascade = { workspace = true }
taffy = "0.8"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
